tests/invalid/missing-joint-parent.hcdf
<?xml version="1.0"?>
<hcdf version="1.0" name="missing-joint-parent">
  <comp name="a"/>
  <comp name="b"/>
  <joint name="j1" type="revolute">
    <child comp="b"/>
    <axis xyz="0 0 1"/>
    <limit lower="-1" upper="1" effort="10" velocity="1"/>
  </joint>
</hcdf>
